config/prow/cluster/ing_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prow-managed-certs
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: prow-canary-k8s-io
spec:
  rules:
    - host: prow-canary.k8s.io
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: deck
                port:
                  number: 80
          - path: /hook
            pathType: ImplementationSpecific
            backend:
              service:
                name: hook
                port:
                  number: 8888
          - path: /metrics
            pathType: ImplementationSpecific
            backend:
              service:
                name: pushgateway-external
                port:
                  number: 80
